aws/workloads/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:5.4
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "256m"
            limits:
              memory: "1024Mi"
              cpu: "512m"
